# snapd

./: #spread.yaml#  .bzrignore  .clang-format  .codecov.yml  .gitignore  .gitmodules  .golangci.yml  .image-garden.mk  .mailmap  .precommit  .shellcheckrc  .spread-prepare.sh  .tarmac.sh  .travis.yml  .woke.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CODING.md  CONTRIBUTE.md  CONTRIBUTING.md  DESIGN.md  FASCIST.md  FOCUS.md  HACKING.md  HACKING.snap-confine.md  INSTALL.md  Makefile  Makefile.am  NEWS.md  PULL_REQUEST_TEMPLATE.md  README  README.md  README.mount_namespace  RELEASE.md  SECURITY.md  VERSION  check-commit-email.py  check-pr-has-label.py  check-pr-skip-spread.py  check-pr-title.py  (+51 more)
cmd/: .clangd  .indent.pro  Makefile  Makefile.am  appinfo.go  appinfo_test.go  autogen.sh  cmd.go  cmd_compat.go  cmd_linux.go  cmd_linux_test.go  cmd_other.go  cmd_test.go  config.h.in  configure.ac  device-cgroup-v2.md  export_test.go  snapinfo.go  snapinfo_test.go  sort.go  sort_test.go  version.go
cmd/cmdutil/: cmdutil.go  cmdutil_test.go  version.go  version_test.go
cmd/decode-mount-opts/: decode-mount-opts.c
cmd/explain/: explain.go  explain_test.go  export_test.go
cmd/libsnap-confine-private/: apparmor-support.c  apparmor-support.h  bpf-support.c  bpf-support.h  cgroup-freezer-support.c  cgroup-freezer-support.h  cgroup-pids-support.c  cgroup-pids-support.h  cgroup-support-private.h  cgroup-support-test.c  cgroup-support.c  cgroup-support.h  classic-private.h  classic-test.c  classic.c  classic.h  cleanup-funcs-test.c  cleanup-funcs.c  cleanup-funcs.h  device-cgroup-support.c  device-cgroup-support.h  error-test.c  error.c  error.h  experimental-test.c  experimental.c  experimental.h  facts-test.c  facts.c  facts.h  fault-injection-test.c  fault-injection.c  fault-injection.h  feature-private.h  feature-test.c  feature.c  feature.h  infofile-test.c  infofile.c  infofile.h  (+43 more)
cmd/libsnap-wrap-private/: error.h  fault-injection-test.c  mountinfo.c  privs.c  privs.h  snap.h
cmd/policygen/: main.go
cmd/privhelper/: privhelper.go
cmd/snap-alter-ns/: snap-alter-ns.rst
cmd/snap-apparmor-parser/: snap-apparmor-parser
cmd/snap-assert/: main.go  main_test.go  snap-assert.md
cmd/snap-bootstrap/: README.md  cmd_check_chooser.go  cmd_check_chooser_test.go  cmd_configure_gadget.go  cmd_create_partitions.go  cmd_create_partitions_test.go  cmd_ephemeral_modeenv.go  cmd_fdekeymgr.go  cmd_fdekeymgr_test.go  cmd_initramfs_mounts.go  cmd_initramfs_mounts_classic_test.go  cmd_initramfs_mounts_cvm.go  cmd_initramfs_mounts_cvm_test.go  cmd_initramfs_mounts_factoryreset_test.go  cmd_initramfs_mounts_install_test.go  cmd_initramfs_mounts_installrun_test.go  cmd_initramfs_mounts_nosecboot.go  cmd_initramfs_mounts_nosecboot_test.go  cmd_initramfs_mounts_recover_degraded_test.go  cmd_initramfs_mounts_recover_test.go  cmd_initramfs_mounts_run_test.go  cmd_initramfs_mounts_secboot.go  cmd_initramfs_mounts_secboot_test.go  cmd_initramfs_mounts_test.go  cmd_measure_epoch.go  cmd_measure_model.go  cmd_pair_data_save.go  cmd_recovery_chooser_trigger.go  cmd_recovery_chooser_trigger_test.go  cmd_scan_disk.go  cmd_scan_disk_test.go  cmd_snap_generator.go  cmd_unlock_data.go  cmd_unlock_save.go  cmd_update_bootloader_vars.go  disk.go  disk_test.go  export_test.go  export_test.go.orig  hybrid_users_import.go  (+9 more)
cmd/snap-chooser-ui-demo/: export_test.go  main.go  main_test.go
cmd/snap-cli-wrap/: snap-cli-wrap.c
cmd/snap-confine/: .gitignore  80-snappy-assign.rules  Makefile.am  PORTING  README.mount_namespace  README.nvidia  README.syscalls  apparmor-support.c  classic.c  classic.h  cleanup-funcs.c  cleanup-funcs.h  context-support-test.c  context-support.c  context-support.h  cookie-support-private.h  cookie-support-test.c  cookie-support.c  cookie-support.h  device-cgroup-support.c  device-cgroup-support.h  error-test.c  error.h  group-policy-test.c  group-policy.c  group-policy.h  mount-opt-test.c  mount-opt.c  mount-opt.h  mount-support-hybris.c  mount-support-hybris.h  mount-support-nvidia.c  mount-support-nvidia.h  mount-support-private.h  mount-support-test.c  mount-support-wsl2-gpu.c  mount-support-wsl2-gpu.h  mount-support.c  mount-support.h  mountinfo.h  (+45 more)
cmd/snap-confine-suid-trampoline/: main.c  snap-confine-suid-trampoline.rst
cmd/snap-device-helper/: main.c  snap-device-helper-test.c  snap-device-helper.c  snap-device-helper.h
cmd/snap-exec/: main.go  (+2 more)
compat/: Makefile.am  ubuntu-core-launcher  ubuntu-core-launcher.in
data/: Makefile  Makefile.am  com.ubuntu.snappy.policy  configure.ac  failure.txt  info  preseed.json  success.txt
src/: 80-snappy-assign.rules  Makefile  Makefile.am  README.nvidia  apparmor-support.c  apparmor-support.h  classic.c  classic.h  cleanup-funcs-test.c  cleanup-funcs.c  cleanup-funcs.h  cleanup-funcs_test.c  decode-mount-opts.c  error-test.c  error.c  error.h  main.c  mount-opt-test.c  mount-opt.c  mount-support-nvidia.c  mount-support-nvidia.h  mount-support-test.c  mount-support.c  mount-support.h  mount-support_test.c  mountinfo-test.c  mountinfo.c  mountinfo.h  ns-support-test.c  ns-support.c  ns-support.h  overlay.c  overlay.h  quirks.c  quirks.h  sanity-test  sanity.c  sanity.h  sc-main.c  sc-main.h  (+30 more)
tests/: Makefile  Makefile.am  build-test-snapd-snap  common.sh  disabled_test_noprofile  external-backend.md  fips-deb  go.mod  manual-tests.md  run-tests  snapd-state.md  test_bad_seccomp_filter_args  test_bad_seccomp_filter_args_null  test_bad_seccomp_filter_args_prctl  test_bad_seccomp_filter_args_prio  test_bad_seccomp_filter_args_socket  test_bad_seccomp_filter_length  test_bad_seccomp_filter_missing_trailing_newline  test_complain  test_complain_missed  test_create_user_data  test_noprofile  test_restrictions  test_restrictions_working  test_restrictions_working_args  test_restrictions_working_args_prctl  test_restrictions_working_args_prio  test_restrictions_working_args_socket  test_setup_bind_mounts  test_tmpdir  test_unrestricted  test_unrestricted_missed  test_whitelist  test_whitelist_bad_length  test_whitelist_bad_missing_trailing_newline
(+11023 files in other folders)
